Remove the dont_remove_invariant_for_fragment_input workaround

Only used by the validating command decoder on Linux, which is
deprecated.

Bug: 659326,639760
Change-Id: I6465c71e0892b4b40430b1bb61c31ad056ba397d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2810880
Reviewed-by: Geoff Lang <geofflang@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Shahbaz Youssefi <syoussefi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#870522}